--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -422,7 +422,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -524,7 +524,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -626,7 +626,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -722,7 +722,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -833,7 +833,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -926,7 +926,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -949,7 +949,7 @@
 }
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success vote</p>
+                    <p class="mt-4 mb-0">Example response when vote is success</p>
                     <p>Status: 201</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -958,7 +958,7 @@
 }
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success unvote</p>
+                    <p class="mt-4 mb-0">Example response when unvote is success</p>
                     <p>Status: 200</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1010,7 +1010,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1033,7 +1033,7 @@
 }
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success vote</p>
+                    <p class="mt-4 mb-0">Example response when vote is success</p>
                     <p>Status: 201</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1042,7 +1042,7 @@
 }
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success unvote</p>
+                    <p class="mt-4 mb-0">Example response when unvote is success</p>
                     <p>Status: 200</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1094,7 +1094,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1117,7 +1117,7 @@
 }
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success vote</p>
+                    <p class="mt-4 mb-0">Example response when vote is success</p>
                     <p>Status: 201</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1126,7 +1126,7 @@
 }
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success unvote</p>
+                    <p class="mt-4 mb-0">Example response when unvote is success</p>
                     <p>Status: 200</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1327,7 +1327,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when failure</p>
+                    <p class="mb-0">Example response when processing is failure</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1336,7 +1336,7 @@
 }    
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success</p>
+                    <p class="mt-4 mb-0">Example response when processing is success</p>
                     <p>Status: 200</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1386,7 +1386,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when unauthenticated</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1395,17 +1395,32 @@
 }    
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success</p>
+                    <p class="mt-4 mb-0">Example response when the validation fail</p>
+                    <p>Status: 422</p>
+                    <div class="bg-light p-2">
+                        <pre class="m-0">
+{
+    "message": "The given data was invalid.",
+    "errors": {
+        "password": [
+            "The password field is required."
+        ],
+        "new_password": [
+            "The new password field is required."
+        ]
+    }
+}
+                        </pre>
+                    </div>
+                    <p class="mt-4 mb-0">Example response when you successfully changed password</p>
                     <p>Status: 200</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
 {
-    "id": "1",
-    "username": "nvn2",
-    "email": "nvnit1176211@gmail.com",
-    "api_token": "3rdsd1l2BMHLtAFSHooKF99YfZd8UcWGp6Tad5fD7kIVHLrYxUk9WxSZm9ez",
-    "is_admin": false
-}                        
+    "username": "admin",
+    "api_token": "5pAG44q1lmy5aBek1v8x4xgTLc8XKPKxZFtYQ7joWEDLtIrei6yeTmr7Xb6b",
+    "is_admin": true
+}                       
                         </pre>
                     </div>
                 </div>
@@ -1448,7 +1463,7 @@
                     </div>
                 </div>
                 <div class="col col-md-6">
-                    <p class="mb-0">Example response when failure</p>
+                    <p class="mb-0">Example response when you're unauthenticated</p>
                     <p>Status: 401</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
@@ -1457,7 +1472,7 @@
 }    
                         </pre>
                     </div>
-                    <p class="mt-4 mb-0">Example response when success</p>
+                    <p class="mt-4 mb-0">Example response when you successfully logged out</p>
                     <p>Status: 200</p>
                     <div class="bg-light p-2">
                         <pre class="m-0">
