--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>War History</title>
+    <title>NVN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index.css?version=2">
@@ -53,6 +53,18 @@
                                     <td class="text-wrap text-break">No</td>
                                     <td class="text-wrap text-break">String</td>
                                     <td class="text-wrap text-break">Page name</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-wrap text-break">size</td>
+                                    <td class="text-wrap text-break">No</td>
+                                    <td class="text-wrap text-break">Number</td>
+                                    <td class="text-wrap text-break">Limit of pages that you want</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-wrap text-break">from</td>
+                                    <td class="text-wrap text-break">No</td>
+                                    <td class="text-wrap text-break">Number</td>
+                                    <td class="text-wrap text-break">Page offset that start to search page</td>
                                 </tr>
                                 <tr>
                                     <td class="text-wrap text-break">api_token</td>
@@ -354,7 +366,14 @@
                     <div class="bg-light p-2">
                         <pre class="m-0">
 {
-    "message": "New article added."
+    "id": 1,
+    "name": "How to reduce inflation?",
+    "thumbnail": "",
+    "f1_created_at": "2024/04/02 16:26",
+    "author_name": "admin",
+    "voted": "yes",
+    "votes": 1,
+    "type": "articles"
 }
                         </pre>
                     </div>
@@ -558,7 +577,14 @@
                     <div class="bg-light p-2">
                         <pre class="m-0">
 {
-    "message": "New discussion added."
+    "id": 1,
+    "name": "How to reduce inflation?",
+    "thumbnail": "",
+    "f1_created_at": "2024/04/02 16:26",
+    "author_name": "admin",
+    "voted": "yes",
+    "votes": 1,
+    "type": "discussions"
 }
                         </pre>
                     </div>
