--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <span>Get pages</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between mb-3">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/pages</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/pages</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -65,6 +65,18 @@
                                     <td class="text-wrap text-break">No</td>
                                     <td class="text-wrap text-break">Number</td>
                                     <td class="text-wrap text-break">Page offset that start to search page</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-wrap text-break">sort</td>
+                                    <td class="text-wrap text-break">No</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break">Sort in ascending(asc) or descending(desc) order</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-wrap text-break">type</td>
+                                    <td class="text-wrap text-break">No</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break">Type of page</td>
                                 </tr>
                                 <tr>
                                     <td class="text-wrap text-break">api_token</td>
@@ -118,7 +130,7 @@
                         <span>Get a specific article</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between mb-3">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/articles/{id}</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/articles/{id}</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -192,7 +204,7 @@
                         <span>Get a specific discussion</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between mb-3">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/discussions/{id}</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/discussions/{id}</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -288,7 +300,7 @@
                         <span>Create new article</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/articles</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/articles</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -388,7 +400,7 @@
                         <span>Update article</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/articles/{id}</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/articles/{id}</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -499,7 +511,7 @@
                         <span>Create new discussion</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/discussions</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/discussions</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -599,7 +611,7 @@
                         <span>Update discussion</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/discussions/{id}</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/discussions/{id}</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -710,7 +722,7 @@
                         <span>Create new opinion</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/opinions</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/opinions</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -800,7 +812,7 @@
                         <span>Update opinion</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/opinions/{id}</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/opinions/{id}</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -920,7 +932,7 @@
                         <span>Toggle article voting</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/votes/articles/toggle</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/votes/articles/toggle</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -1004,7 +1016,7 @@
                         <span>Toggle discussion voting</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/votes/discussions/toggle</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/votes/discussions/toggle</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -1088,7 +1100,7 @@
                         <span>Toggle opinion voting</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/votes/opinions/toggle</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/votes/opinions/toggle</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -1172,7 +1184,7 @@
                         <span>Register a new account</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/register</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/register</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div class="mt-3">
@@ -1255,7 +1267,7 @@
                         <span>Login</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/login</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/login</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -1327,7 +1339,7 @@
                         <span>Get the authenticated user's info</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/users</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/users</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -1386,7 +1398,7 @@
                         <span>Change account's password</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/users/password/change</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/users/password/change</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -1460,7 +1472,7 @@
                         <span>Logout</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/logout</span>
+                        <span class="text-wrap text-break">https://nvnwh.000webhostapp.com/api/logout</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div class="mt-3">
